<resources>
	<string name="app_name">Robin8</string>
	<string name="click_again_go_back">再按一次退出Robin8</string>
	<string name="text_reword">分享活动</string>
	<string name="main_share">分享</string>
	<string name="text_first">首页</string>
	<string name="text_campaign">活动</string>
	<string name="text_create">创作</string>
	<string name="text_mine">我的</string>
	<string name="text_find">发现</string>
	<string name="text_show">展开</string>
	<string name="text_pack_up">收起</string>
	<string name="text_collect">收藏</string>
	<string name="text_collected">已收藏</string>
	<string name="my_collect">我的收藏</string>
	<string name="content">内容</string>
	<string name="mine_ad_host">品牌主</string>
	<string name="max_click_number">最大点击数</string>
	<string name="history_total_income">历史总收益</string>
	<string name="max_per_income">最高单笔收益</string>
	<string name="average_income">平均收益</string>
	<string name="apprentice_collect_money">收徒赚收益</string>
	<string name="apprentice_all_collect_money">收徒总收益</string>
	<string name="today_apprentices">今日已收徒</string>
	<string name="click_login_approve">*点击登录或社交帐号即同意</string>
	<string name="serviece_protocol">用户服务协议</string>
	<string name="more_loading">正在加载更多数据</string>
	<string name="no_net_click_reload">加载失败，点击重试</string>
	<string name="no_more_data">无更多数据</string>
	<string name="register_or_login">注册/登录</string>
	<string name="forget_pwd">忘记密码</string>
	<string name="fix_pwd">修改密码</string>
	<string name="email_login">邮箱登录</string>
	<string name="login">登录</string>
	<string name="pwd">密码</string>
	<string name="launch_reword">发布悬赏活动</string>
	<string name="type_count_by_click">按点击次数计费</string>
	<string name="type_count_by_kol">按KOL转发计费</string>
	<string name="type_download_by_kol">按KOL下载计费</string>
	<string name="type_task_by_kol">按KOL任务计费</string>
	<string name="min_2">最低0.2元</string>
	<string name="min_20">最低2元</string>
	<string name="min_25">最低2.5元</string>
	<string name="min_3">最低3元</string>
	<string name="min_1">最低1元</string>
	<string name="normal_issue">常见问题</string>
	<string name="update_loading">正在下载···</string>
	<string name="update_beginload">开始下载</string>
	<string name="update_wait">请稍候..</string>
	<string name="update_ing">正在为您更新</string>
	<string name="update_backupdate">正在为您转入后台下载更新···</string>
	<string name="no_net">网络请求失败，请检查网络!</string>
	<string name="put_right_email_address">请输入正确的邮箱!</string>
	<string name="put_pwd">请输入密码</string>
	<string name="pickerview_cancel">取消</string>
	<string name="pickerview_submit">确定</string>
	<string name="pickerview_year">年</string>
	<string name="pickerview_month">月</string>
	<string name="pickerview_day">日</string>
	<string name="pickerview_hours">时</string>
	<string name="pickerview_minutes">分</string>
	<string name="pickerview_seconds">秒</string>
	<string name="name">姓名</string>
	<string name="contact_telphone">联系电话</string>
	<string name="mine_wallet">我的钱包</string>
	<string name="was_withdraw">已提现</string>
	<string name="was_consume">已花费</string>
	<string name="being_withdraw">提现中</string>
	<string name="beable_withdraw">可提现</string>
	<string name="days7_income_development">7日收益趋势</string>
	<string name="total">共</string>
	<string name="income_times">笔收入</string>
	<string name="total_count">合计:</string>
	<string name="total_income">总收益 ></string>
	<string name="income_info2">*图中显示金额包含预计收入(待审核收入)</string>
	<string name="income_info3">满50元即可提现</string>
	<string name="withdraw">提现</string>
	<string name="withdraw_now">立即提现</string>
	<string name="un_binded">未绑定</string>
	<string name="click_bind">点击绑定</string>
	<string name="alipay_bind">支付宝绑定</string>
	<string name="alipay_account">支付宝账号</string>
	<string name="alipay_name">支付宝姓名</string>
	<string name="id_card">身份证号码</string>
	<string name="please_write_alipay_account">请填写支付宝账号</string>
	<string name="please_write_alipay_name">请填写支付宝姓名</string>
	<string name="please_write_id_number">请填写身份证号码</string>
	<string name="click">点击</string>
	<string name="post">转发</string>
	<string name="shared_clicked_by_friends">分享后好友点击此文章即获得报酬</string>
	<string name="post_this_page_get_reword">转发此文章立即获得报酬</string>
	<string name="activity_order_pay">活动订单支付</string>
	<string name="my_launch_activity">我发布的活动</string>
	<string name="order_pay_success">订单支付成功</string>
	<string name="order_pay">订单支付</string>
	<string name="we_check_it_in_24hours">我们将在24小时内审核您的活动</string>
	<string name="look_activity">查看活动</string>
	<string name="recharge">充值</string>
	<string name="recharge_instantly">立即充值</string>
	<string name="pay_instantly">立即支付</string>
	<string name="checking">审核中</string>
	<string name="checked_rejected">审核拒绝</string>
	<string name="checked_passed">审核通过</string>
	<string name="executing">进行中</string>
	<string name="executed">活动结束</string>
	<string name="settled">已结算</string>
	<string name="no_data_try_others">当前页面无数据，试试别的页面吧</string>
	<string name="my_menu">我的账单</string>
	<string name="revoke_campaign">撤销活动</string>
	<string name="robin_indiana">一元购</string>
	<string name="detail_indiana">夺宝详情</string>
	<string name="participated">参与了</string>
	<string name="person_times">人次</string>
	<string name="you_not_participated">您没有参加本次活动</string>
	<string name="this_participated">本期参与：</string>
	<string name="this_issue">本期期号：</string>
	<string name="draw_time">揭晓时间：</string>
	<string name="total_consume">共消耗余额</string>
	<string name="current_amount">元(当前余额：₫</string>
	<string name="right_">)</string>
	<string name="count_detail">计算详情</string>
	<string name="lucky_number">幸运号码：</string>
	<string name="you_participated_times">您参与了:</string>
	<string name="my_participated_times">我已参与:</string>
	<string name="indiana_number">夺宝号码:</string>
	<string name="participated_schedule">参与进度：</string>
	<string name="percent_sign">%</string>
	<string name="instantly_indiana">立即夺宝</string>
	<string name="has_announced">已经揭晓</string>
	<string name="total_need_times">总需人次：</string>
	<string name="delivery_address">收货地址</string>
	<string name="submit">提交</string>
	<string name="submit_success">提交成功</string>
	<string name="submit_failed">提交失败</string>
	<string name="please_write_title">请填写标题</string>
	<string name="please_write_name">请填写姓名</string>
	<string name="please_write_telphone">请填写联系电话</string>
	<string name="please_write_address">请填写收货地址</string>
	<string name="you_have_sign">您已连续签到</string>
	<string name="day">天</string>
	<string name="sign_successfully">签到成功</string>
	<string name="sign">每日任务</string>
	<string name="wechat">朋友圈</string>
	<string name="invite_ta_participate_campaign">给TA发特邀活动</string>
	<string name="kol_brief">KOL简介</string>
	<string name="kol_display">KOL展示</string>
	<string name="kol_tag_cloud">KOL标签云</string>
	<string name="business_cooperation">商务合作</string>
	<string name="please_write_company">请填写公司</string>
	<string name="please_write_email">请填写邮箱</string>
	<string name="search">搜索</string>
	<string name="cancel">取消</string>
	<string name="clear_history">清空历史</string>
	<string name="nickname">昵称</string>
	<string name="number_of_fans">粉丝数</string>
	<string name="number_of_videos">视频数</string>
	<string name="business_cop_content_fir_from_product_list">我是品牌主,我要CPS合作\\n</string>
	<string name="business_cop_content_fir">我是品牌主,我要特邀KOL\\n</string>
	<string name="business_submit_success">提交成功，我们会尽快与您联系,请保持电话畅通!</string>
	<string name="my_concern">我的关注</string>
	<string name="edit_invitation_code">输入邀请码</string>
	<string name="be_kol">我的资料</string>
	<string name="edit_kol">编辑KOL资料</string>
	<string name="icons_favorite_selected">&#xe622;</string>
	<string name="icons_favorite_unselected">&#xe623;</string>
	<string name="icons_back">&#xe603;</string>
	<string name="icons_delete">&#xe618;</string>
	<string name="icons_delete2">&#xe61b;</string>
	<string name="icons_message">&#xe625;</string>
	<string name="icons_setting">&#xe61f;</string>
	<string name="icons_box_delete">&#xe618;</string>
	<string name="arrow_right">&#xe60e;</string>
	<string name="hook_sign">&#xe61e;</string>
	<string name="share_sign">&#xe608;</string>
	<string name="search_sign">&#xe602;</string>
	<string name="icons_message_open">&#xe616;</string>
	<string name="unselected">&#xe61a;</string>
	<string name="selected">&#xe61e;</string>
	<string name="next">下一步</string>
	<string name="invite_friends">邀请好友</string>
	<string name="be_kol_first_compelete_data">资料完善度越高，接受的活动价格越高</string>
	<string name="confirm">确定</string>
	<string name="interest">兴趣</string>
	<string name="user_phone_num">手机号</string>
	<string name="user_email">E-mail</string>
	<string name="interest_tags">兴趣标签(可选5个)</string>
	<string name="please_write">请填写</string>
	<string name="age">年龄</string>
	<string name="professional">职业</string>
	<string name="introduction">简介</string>
	<string name="please_write_personal_show">请填写个人精彩展示</string>
	<string name="personal_show">个人精彩展示</string>
	<string name="weixin">微信</string>
	<string name="gongzhonghao">公众号</string>
	<string name="weibo">微博</string>
	<string name="qq">QQ</string>
	<string name="for_example_address">例如:http//mp.weixin.qq.com/s?__biz=...</string>
	<string name="friends_number">好友人数</string>
	<string name="offer_unit">报价(元/条)</string>
	<string name="please_bind">请绑定</string>
	<string name="account">账号</string>
	<string name="click_open">点击打开</string>
	<string name="corresponding_wechat">对应的微信号</string>
	<string name="for_example">例如：</string>
	<string name="has_binded">已绑定</string>
	<string name="male">男</string>
	<string name="female">女</string>
	<string name="please_data_wrong">请求参数错误</string>
	<string name="over_time">请求超时</string>
	<string name="unknown">未知</string>
	<string name="data_reviewing">资料审核中</string>
	<string name="click_login">点击登录</string>
	<string name="login_get_more_campaign">登录获取更多活动</string>
	<string name="data_rejected">资料审核拒绝</string>
	<string name="data_reviewing_again">重新审核中</string>
	<string name="please_write_nick_name">请填写昵称</string>
	<string name="please_write_age">请填写年龄</string>
	<string name="please_write_interest">请填写兴趣</string>
	<string name="promote_the_content_page_for_details">推广内容详情页</string>
	<string name="campaign_data_download">活动素材下载</string>
	<string name="approved_wait_activity_start">等待活动开始</string>
	<string name="campaign_unstart">活动未开始</string>
	<string name="reject_campaign">拒绝此活动</string>
	<string name="upload_screenshot">上传截图</string>
	<string name="approved_check_the_screenshot">审核通过-查看截图</string>
	<string name="approving_check_the_screenshot">审核中-查看截图</string>
	<string name="look_the_screenshot">查看截图</string>
	<string name="upload_again">再次上传</string>
	<string name="recurit_process">招募活动流程</string>
	<string name="kol_sign_up">KOL报名活动</string>
	<string name="brand_select_kol">品牌主选择KOL</string>
	<string name="kol_receive_campaign">KOL接受活动</string>
	<string name="download_campaign_material">下载活动素材</string>
	<string name="upload_campaign_screenshot">上传活动截图</string>
	<string name="screenshot_check_passed">截图审核通过</string>
	<string name="my_wallet_to_account">我的钱包到账</string>
	<string name="image_check_reject">图片审核不通过:</string>
	<string name="share_article_tips">文章分享后，您的朋友购买了文章中的商品，您可以获得高额提成</string>
	<string name="kol_age">KOL年龄</string>
	<string name="kol_sex">KOL性别</string>
	<string name="kol_classify">KOL分类</string>
	<string name="kol_city">KOL城市</string>
	<string name="text_class">文章类别</string>
	<string name="key_tags">关键词云</string>
	<string name="sentiment_analysis">情感分析</string>
	<string name="product_server">产品服务</string>
	<string name="person_brand">人物品牌</string>
	<string name="detail">文章详情>></string>
	<string name="share_fillter_1">全部</string>
	<string name="share_fillter_2">新任务</string>
	<string name="share_fillter_3">进行中</string>
	<string name="share_fillter_4">待审核</string>
	<string name="share_fillter_5">已完成</string>
	<string name="share_fillter_6">已错失</string>
	<string name="robin136">填写文章链接</string>
	<string name="robin137">复制链接，即可自动填写【建议发布微信文章】</string>
	<string name="robin138">选择期望效果</string>
	<string name="robin139">Robin8国内首家利用NLP技术进行精准营销只需复制文章链接即可只能发布</string>
	<string name="robin230">提现金额</string>
</resources>