<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rg"
    android:layout_width="200dp"
    android:layout_height="match_parent"
    android:background="@color/white_custom"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/rb0"
        style="@style/text_diaglog_filter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/share_fillter_1"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb1"
        style="@style/text_diaglog_filter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/share_fillter_2"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb2"
        style="@style/text_diaglog_filter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/share_fillter_3"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb3"
        style="@style/text_diaglog_filter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/share_fillter_4"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb4"
        style="@style/text_diaglog_filter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/share_fillter_5"
        android:textColor="#99181616"
        android:textSize="14sp" />

    <RadioButton
        android:id="@+id/rb5"
        style="@style/text_diaglog_filter"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/share_fillter_6"
        android:textColor="@color/normal"
        android:textSize="14sp" />
</RadioGroup>
