<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="13dp">

        <TextView
            style="@style/text_view_with_left_line"
            android:text="@string/kol_classify" />

        <com.robin8.rb.ui.widget.PieChartView
            android:id="@+id/pv_classify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sub_gray_custom" />

        <TextView
            style="@style/text_view_with_left_line"
            android:layout_marginTop="13dp"
            android:text="@string/kol_sex" />

        <com.robin8.rb.ui.widget.PieChartView
            android:id="@+id/pv_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sub_gray_custom" />

        <TextView
            style="@style/text_view_with_left_line"
            android:layout_marginTop="13dp"
            android:text="@string/kol_age" />

        <com.robin8.rb.ui.widget.PieChartView
            android:id="@+id/pv_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sub_gray_custom" />

        <TextView
            style="@style/text_view_with_left_line"
            android:layout_marginTop="13dp"
            android:text="@string/kol_city" />

        <WebView
            android:id="@+id/webview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</ScrollView>