<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="13dp"
            android:gravity="center_vertical"
            android:text="@string/robin136"
            android:textColor="@color/gray_custom"
            android:textSize="@dimen/undefine_font_3" />

        <RelativeLayout
            android:id="@+id/rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv1"
            android:background="@color/white_custom"
            android:paddingLeft="13dp"
            android:paddingRight="13dp">

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:background="@null"
                android:hint="@string/robin137"
                android:inputType="text"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/sub_black_custom"
                android:textColorHint="@color/sub_gray_custom"
                android:textSize="@dimen/undefine_font_5" />

            <TextView
                android:id="@+id/tv_delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/icons_delete"
                android:textColor="@color/sub_black_custom"
                android:textSize="@dimen/undefine_font_5"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/rl"
            android:layout_marginLeft="13dp"
            android:gravity="center_vertical"
            android:text="@string/robin138"
            android:textColor="@color/gray_custom"
            android:textSize="@dimen/undefine_font_3" />

        <com.robin8.rb.ui.widget.OtherGridView
            android:id="@+id/gv_expect_effect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tv2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:horizontalSpacing="12dp"
            android:listSelector="@android:color/transparent"
            android:minHeight="300dp"
            android:numColumns="2"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:verticalSpacing="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:gravity="center"
            android:text="@string/robin139"
            android:textColor="@color/sub_gray_custom"
            android:textSize="@dimen/undefine_font_3" />
    </RelativeLayout>
</ScrollView>