<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_custom"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/undefine_font_5"
        android:textColor="@color/sub_black_custom"
        android:layout_centerInParent="true"
        android:text="@string/order_pay_success"
        />

    <TextView
        android:id="@+id/tv2"
        android:layout_below="@+id/tv"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="@dimen/undefine_font_5"
        android:textColor="@color/sub_gray_custom"
        android:layout_centerInParent="true"
        android:text="@string/we_check_it_in_24hours"
        />

    <ImageView
        android:layout_above="@+id/tv"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_width="70dp"
        android:background="@mipmap/icon_btn_selected"/>

    <TextView
        android:id="@+id/look_activity"
        android:layout_below="@+id/tv2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/undefine_font_5"
        android:textColor="@color/white_custom"
        android:background="@color/blue_custom"
        android:layout_centerInParent="true"
        android:text="@string/look_activity"
        />
</RelativeLayout>