<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_custom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_income_alipy" />

        <LinearLayout
            android:id="@+id/ll_bind"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_bind_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/un_binded"
                android:textColor="@color/sub_gray_custom"
                android:textSize="@dimen/undefine_font_3" />
            <TextView
                android:id="@+id/tv_bind_name"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_bind"
                android:textColor="@color/sub_black_custom"
                android:textSize="@dimen/undefine_font_5" />
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@mipmap/arrow_right" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/undefined_divide_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/robin230"
            android:textColor="@color/sub_black_custom"
            android:textSize="@dimen/undefine_font_5" />

        <EditText
            android:id="@+id/et_num"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/income_info3"
            android:inputType="numberDecimal"
            android:maxLength="12"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:textColor="@color/sub_black_custom"
            android:textColorHint="@color/sub_gray_custom"
            android:textSize="@dimen/undefine_font_5" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/undefined_divide_line" />


    <TextView
        android:id="@+id/tv_submit"
        android:layout_margin="50dp"
        android:padding="10dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bg_blue_pane"
        android:text="@string/submit"
        android:textColor="@color/blue_custom"
        android:textSize="@dimen/undefine_font_5" />

</LinearLayout>