<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_corner_bg_regular"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/image_check_reject"
                android:textColor="@color/sub_black_custom"
                android:textSize="@dimen/undefine_font_4" />

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:lineSpacingExtra="3dp"
                android:text="@string/share_article_tips"
                android:textColor="@color/sub_black_custom"
                android:textSize="@dimen/undefine_font_4" />
        </LinearLayout>

        <View
            style="@style/Undefined_Line"
            android:layout_width="280dp" />

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="44dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/confirm"
                style="@style/text_view_with_dialog_positive"
                android:textSize="@dimen/undefine_font_4" />

            <View
                android:layout_width="0.4dp"
                android:layout_height="match_parent"
                android:background="@color/undefined_divide_line" />

            <TextView
                android:id="@+id/tv_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/look_the_screenshot"
                android:textColor="@color/sub_gray_custom"
                android:textSize="@dimen/undefine_font_4" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>